--- a/flask_backend/requirements.txt
+++ b/flask_backend/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.8
 flask-restplus==0.13.0
 Flask-Script==2.0.6
 idna==2.10
